# regxml_extractor

./: .gitignore  .gitmodules  COPYING  INSTALL.md  Makefile.am  README.md  TTD.txt  bootstrap.sh  configure.ac  run.in
etc/: Makefile.am  dc.xsd  m57-sequences.txt  regxml.xsd
lib/: Makefile.am
python/: Makefile.am  make_database.py
scripts/: Makefile.am  Registry  Registry.py  RegistryParse.py  _autotool_vars.py  _autotool_vars_py_from_sh.sh.in  dfxml_tool.py  extract_hives.py  flatten_regxml.py  make_database.py  rdifference.py  rdifference_db.py  regxml_aggregator.sh  regxml_extractor.py  regxml_extractor.sh  regxml_extractor.sh.in  regxmlify_image.sh  run_re_on_hivex_hives.sh  rx_extract_hives.py  rx_extract_hives.py.in  rx_make_database.py  rx_make_database.py.in  rx_make_flat_regxml.py  rx_regxml_from_image.sh  verify_fiwalk_versus_tsk_db.py  wb_make_flat_regxml.py
tests/: evaluate_regxml_extractor.sh  log_re_on_one_image.sh
tests/for_throwaway_vms_only/: _autotool_vars.sh.in  _build_regxml_extractor.sh  build_on_centos-6.4.sh  build_on_debian-7.0.0.sh  build_on_fedora-17.sh  build_on_fedora-18.sh  build_on_fedora-19.sh  build_on_osx-10.6.sh  build_on_osx-10.7.sh  build_on_osx-10.8.sh  build_on_ubuntu-12.04.sh  build_on_ubuntu-12.10.sh  build_on_ubuntu-13.04.sh  build_on_ubuntu-13.10.sh  build_regxml_extractor.sh
