#repdir: RegXML Extractor Python directory
repdir = ${pkgdatadir}/python

rep_DATA = \
  dfxml_tool.py

rep_PYTHON = \
  flatten_regxml.py \
  rdifference.py \
  rx_extract_hives.py \
  rx_make_database.py \
  rx_make_flat_regxml.py

bin_SCRIPTS = regxml_extractor.sh

EXTRA_DIST = \
  dfxml_tool.py \
  flatten_regxml.py \
  rdifference.py \
  regxml_extractor.sh \
  rx_extract_hives.py \
  rx_make_database.py \
  rx_make_flat_regxml.py
